--- a/app/src/main/res/layout-v21/activity_living_expenses.xml
+++ b/app/src/main/res/layout-v21/activity_living_expenses.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent"
     tools:context="lincolntee.studentfinance.LivingExpensesActivity">
 
-    <ImageButton
-        android:id="@+id/imageButtonBack_LEA"
-        android:layout_width="96dp"
-        android:layout_height="51dp"
+    <Button
+        android:id="@+id/buttonBack_LEA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:backgroundTint="?android:attr/colorPrimary"
-        android:contentDescription="@string/iconBackButton"
+        android:backgroundTint="?attr/colorPrimary"
+        android:text="@string/buttonBack_LEA"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonCalculate"
@@ -28,7 +28,7 @@
         android:text="@string/buttonCalculate"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" tools:targetApi="lollipop" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TableRow
         android:id="@+id/LivingExpenseTable"
@@ -69,16 +69,20 @@
     </TableRow>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_width="353dp"
+        android:layout_height="487dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="88dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="4dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="72dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -90,34 +94,63 @@
 
             <EditText
                 android:id="@+id/editTextIncomeValue"
-                android:labelFor="@+id/editTextIncomeValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:labelFor="@+id/editTextIncomeValue"
                 android:text="@string/editTextIncomeValue" />
 
-            <EditText
+            <TextView
                 android:id="@+id/textViewExpenseValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:labelFor="@+id/textViewExpenseValue"
-                android:text="@string/textViewExpenseValue" />
+                android:labelFor="@+id/editTextBalanceValue"
+                android:text="@string/editTextExpenseValue"
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textViewBalanceValue"
-                android:labelFor="@+id/editTextBalanceValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:labelFor="@+id/editTextBalanceValue"
                 android:text="@string/textViewBalanceValue"
                 android:textSize="24sp" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editTextItemName"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text|textAutoCorrect|textAutoComplete"
+                android:labelFor="@+id/editTextItemName"
+                android:text="@string/editTextItemName" />
+
+            <EditText
+                android:id="@+id/editTextItemPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number"
+                android:labelFor="@+id/editTextItemPrice"
+                android:text="@string/editTextItemPrice" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
