--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,87 +8,116 @@
 
     <TextView
         android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_width="336dp"
+        android:layout_height="92dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/textViewTitle"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121"
+        app:layout_constraintVertical_bias="0.019"
         tools:text="Welcome to Student Finance Planner" />
 
     <Button
         android:id="@+id/buttonProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="72dp"
-        android:text="@string/buttonProfile"
+        android:layout_width="110dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="24dp"
         android:onClick="openProfile"
+        android:text="@string/buttonProfile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
         tools:text="Profile" />
 
     <Button
         android:id="@+id/buttonExit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="68dp"
-        android:layout_marginTop="116dp"
-        android:text="@string/buttonExit"
+        android:layout_width="117dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginTop="8dp"
         android:onClick="exitApplication"
+        android:text="@string/buttonExit"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLivingExpenses"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewExit"
+        app:layout_constraintVertical_bias="0.051"
         tools:text="Exit" />
 
     <Button
         android:id="@+id/buttonLoan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="112dp"
-        android:text="@string/buttonLoan"
+        android:layout_width="115dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="12dp"
         android:onClick="viewLoan"
-        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
-        app:layout_constraintHorizontal_bias="0.483"
+        android:text="@string/buttonLoan"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonProfile"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewLoanInformation"
+        app:layout_constraintVertical_bias="0.026"
         tools:text="Loan" />
 
     <Button
         android:id="@+id/buttonLivingExpenses"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
-        android:text="@string/buttonLivingExpenses"
+        android:layout_width="128dp"
+        android:layout_height="78dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginTop="24dp"
         android:onClick="viewLivingExpenses"
+        android:text="@string/buttonLivingExpenses"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toEndOf="@+id/buttonProfile"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewExpenses"
         tools:text="Living Expenses" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="36dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonProfile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.262"
+        android:id="@+id/imageViewProfile"
+        android:layout_width="62dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="128dp"
+        android:contentDescription="imageViewProfile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_perm_identity_blue_24dp" />
+
+    <ImageView
+        android:id="@+id/imageViewExpenses"
+        android:layout_width="71dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginTop="128dp"
+        android:contentDescription="imageViewExpenses"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_account_balance_wallet_black_24dp" />
+
+    <ImageView
+        android:id="@+id/imageViewLoanInformation"
+        android:layout_width="50dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="32dp"
+        android:contentDescription="imageViewLoanInformation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonProfile"
+        app:srcCompat="@drawable/ic_account_balance_black_24dp" />
+
+    <ImageView
+        android:id="@+id/imageViewExit"
+        android:layout_width="61dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginTop="28dp"
+        android:contentDescription="imageViewExit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLivingExpenses"
+        app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />
 </android.support.constraint.ConstraintLayout>
