--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/textViewTitle"
+        android:textColor="?attr/actionModeSplitBackground"
         android:textSize="24sp"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +31,10 @@
         android:layout_height="75dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="24dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:onClick="openProfile"
         android:text="@string/buttonProfile"
+        android:textColor="@android:color/background_light"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
         tools:text="Profile" />
@@ -42,8 +46,10 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="56dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:onClick="exitApplication"
         android:text="@string/buttonExit"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewExit"
@@ -57,8 +63,10 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:onClick="viewLoan"
         android:text="@string/buttonLoan"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewLoanInformation"
@@ -71,8 +79,10 @@
         android:layout_height="78dp"
         android:layout_marginEnd="56dp"
         android:layout_marginTop="24dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:onClick="viewLivingExpenses"
         android:text="@string/buttonLivingExpenses"
+        android:textColor="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewExpenses"
         tools:text="Living Expenses" />
