--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -70,21 +70,41 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="22dp"
             android:ems="10"
             android:hint="Name"
             android:inputType="textPersonName"
             android:text="@string/editTextItemName"
             android:textSize="24sp" />
 
+        <TextView
+            android:id="@+id/textViewCoordinate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/editTextYearIntake"
+            android:layout_marginTop="23dp"
+            android:text="Coordinate"
+            android:textSize="24sp" />
+
         <Button
             android:id="@+id/buttonUpdate"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:backgroundTint="?attr/colorPrimary"
             android:text="@string/buttonUpdate"
             android:textColor="@android:color/background_light" />
+
+        <Button
+            android:id="@+id/buttonGetLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="GET LOCATION"
+            android:textColor="@android:color/background_light" />
+
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
